* Added the *operator* parameter for the *tag* and *tags* parameters that specifies the use of *AND*, *IN*, or *NOT IN* for the database query. * Added the *tags* parameter that enables to fetch tweets with multiple tags. * Added a widget that fetches tweets by tag. * Fixed a bug that profile images get lost with the *tag* parameter since 1.0.0.1. * Fixed a bug that caused a warning in the background, "PHP Warning:  in_array(): Wrong datatype for second argument in ...\wp-content\plugins\fetch-tweets\class\FetchTweets_WidgetByID_.php on line 76"
git-svn-id: https://plugins.svn.wordpress.org/fetch-tweets/trunk@744110 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,13 @@
 	line-height: 1em;
 }
 .fetch-tweets-profile-image {
-	float:left;
+	float: left;
 	clear: left;
-	margin: 0 12px 0 0;
+	margin: 0 8px 0 0;
+}
+.fetch-tweets-user-name {
+	display: inline-block; 
+	vertical-align: top;
 }
 .fetch-tweets-user-name a {
 	text-decoration: none;
@@ -20,7 +24,7 @@
 .fetch-tweets-tweet-created-at {
 	float: right; 
 	font-size: smaller; 
-	padding-top: 2px;
+	
 }
 .fetch-tweets-tweet-created-at a {
 	text-decoration: none;
