--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 .fetch-tweets-item {
-	display:inline-block; 
-	clear: both; 
-	width: 100%; 
-	margin-bottom: 12px;
+	display: inline-block; 
+	margin-bottom: 0.5em;	
+	width: 100%;
 }
 .fetch-tweets-retweet {
 }
 .fetch-tweets-heading {
+text-align: right;
+width: auto;
 	line-height: 1em;
 }
 .fetch-tweets-profile-image {
@@ -15,6 +16,7 @@
 	margin: 0 8px 0 0;
 }
 .fetch-tweets-user-name {
+float: left;
 	display: inline-block; 
 	vertical-align: top;
 }
@@ -22,14 +24,20 @@
 	text-decoration: none;
 }
 .fetch-tweets-tweet-created-at {
+
 	float: right; 
+
 	font-size: smaller; 
 	
 }
 .fetch-tweets-tweet-created-at a {
 	text-decoration: none;
 }
+.fetch-tweets-body {
+	clear: right;
+}
 .fetch-tweets-text {
+
 	margin-bottom: 0;
 }
 .fetch-tweets-retweet-credit {
