--- a/template/single/style.css
+++ b/template/single/style.css
@@ -1,3 +1,16 @@
+/*
+Template Name: Single
+Template URI: http://en.michaeluno.jp
+Author: Michael Uno
+Author URI: http://en.michaeluno.jp
+Description: Displays tweets for a single account.
+Version: 1.0.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: single
+Text Domain: fetch-tweets
+*/
+
 .fetch-tweets-single-container {
 	overflow-y: auto;	
 	overflow-x: hidden;
