* Tweaked the default template styles. * Changed the timing of loading active template's functions files to before the header gets sent. * Added the visibility, margins, paddings, and the background color options for the default templates. The users may need to re-configure the height and width of the template option. * Updated the Admin Page Framework library to v2.0.2.
git-svn-id: https://plugins.svn.wordpress.org/fetch-tweets/trunk@768465 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/template/plain/style.css
+++ b/template/plain/style.css
@@ -18,7 +18,8 @@ Text Domain: fetch-tweets
 }
 .fetch-tweets-item {
 	display: inline-block; 
-	margin-bottom: 0.5em;	
+	padding-right: 0.5em;
+	padding-bottom: 0.5em;	
 	width: 100%;
 }
 .fetch-tweets-retweet {
