* Fixed a bug that an undefined constant warning occurred in WordPress v3.4.x or below. * Added the ability to perform authentication without creating an application by the user. * Tweaked the caching system for embedded media elements. * Tweaked the default template styles for embedded images to keep the aspect ratio.
git-svn-id: https://plugins.svn.wordpress.org/fetch-tweets/trunk@779004 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/template/plain/style.css
+++ b/template/plain/style.css
@@ -67,12 +67,15 @@ Text Domain: fetch-tweets
 .fetch-tweets-retweet-credit a {
 	text-decoration: none;
 }
-.fetch-tweets-external-media {
+.fetch-tweets .fetch-tweets-external-media {
 	clear: both;
 }
-.fetch-tweets-media-photo {
-}
 .fetch-tweets .fetch-tweets-media-photo {
+}
+.fetch-tweets .fetch-tweets-external-media img,
+.fetch-tweets .fetch-tweets-media-photo img {
+	max-width: 100%;
+	height: auto;	
 }
 .fetch-tweets .fetch-tweets-media {
 }
