--- a/template/single/style.css
+++ b/template/single/style.css
@@ -93,10 +93,11 @@ div.fetch-tweets-single-body p.fetch-tweets-single-text {
 }
 .fetch-tweets-single-retweet-credit a {
 }
-.fetch-tweets-external-media {
+.fetch-tweets-single-container .fetch-tweets-external-media {
 	clear: both;
 }
-.fetch-tweets-single-container .fetch-tweets-media-photo {
-}
-.fetch-tweets-single-container .fetch-tweets-media {
+.fetch-tweets-single-container .fetch-tweets-external-media img,
+.fetch-tweets-single-container .fetch-tweets-media-photo img {
+	max-width: 100%;
+	height: auto;	
 }
