--- a/template/plain/style.css
+++ b/template/plain/style.css
@@ -4,7 +4,7 @@ Template URI: http://en.michaeluno.jp
 Author: Michael Uno
 Author URI: http://en.michaeluno.jp
 Description: Displays tweets for multiple accounts. 
-Version: 1.2.0
+Version: 1.3.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: default
@@ -62,6 +62,7 @@ Text Domain: fetch-tweets
 }
 .fetch-tweets-retweet-credit {
 	float: right;
+	margin-left: 0.5em;
 	font-size: smaller;
 }
 .fetch-tweets-retweet-credit a {
@@ -78,4 +79,29 @@ Text Domain: fetch-tweets
 	height: auto;	
 }
 .fetch-tweets .fetch-tweets-media {
+}
+
+.fetch-tweets-intent-buttons {
+	float: right;
+	font-size: smaller;
+	margin: 0;
+	padding: 0;		
+}
+.fetch-tweets-intent-buttons li {
+	display: inline;
+}
+.fetch-tweets-intent-buttons-text {
+	vertical-align: middle;
+}
+
+.fetch-tweets-intent-icon {
+	display: inline-block;
+	vertical-align: middle;
+	width: 16px;
+	height: 16px;
+	background-position: 0 0;
+	background-repeat:no-repeat;
+}
+.fetch-tweets-intent-icon:hover  {
+	background-position: -16px 0;
 }
