Adjusted the default template style for Twenty Twelve.
git-svn-id: https://plugins.svn.wordpress.org/fetch-tweets/trunk@779818 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/template/plain/style.css
+++ b/template/plain/style.css
@@ -60,6 +60,9 @@ Text Domain: fetch-tweets
 .fetch-tweets-text {
 	margin-bottom: 0;
 }
+div.fetch-tweets-body p.fetch-tweets-text {
+	margin-bottom: 0;
+}
 .fetch-tweets-retweet-credit {
 	float: right;
 	margin-left: 0.5em;
@@ -87,8 +90,15 @@ Text Domain: fetch-tweets
 	margin: 0;
 	padding: 0;		
 }
+.fetch-tweets-intent-buttons a ,
+.fetch-tweets-intent-icon a:hover {
+	text-decoration: none;
+}
 .fetch-tweets-intent-buttons li {
 	display: inline;
+}
+ul.fetch-tweets-intent-buttons li {
+	margin-left: 0;
 }
 .fetch-tweets-intent-buttons-text {
 	vertical-align: middle;
