Adjusted the style of the default template Single for Twenty Twelve.
git-svn-id: https://plugins.svn.wordpress.org/fetch-tweets/trunk@779821 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/template/single/style.css
+++ b/template/single/style.css
@@ -118,6 +118,9 @@ div.fetch-tweets-single-body p.fetch-tweets-single-text {
 .fetch-tweets-single-intent-buttons li {
 	display: inline;
 }
+ul.fetch-tweets-single-intent-buttons li {
+	margin-left: 0;
+}
 .fetch-tweets-single-intent-buttons-text {
 	vertical-align: middle;
 }
