--- a/template/plain/style.css
+++ b/template/plain/style.css
@@ -4,7 +4,7 @@ Template URI: http://en.michaeluno.jp
 Author: Michael Uno
 Author URI: http://en.michaeluno.jp
 Description: Displays tweets for multiple accounts. 
-Version: 1.3.1
+Version: 1.3.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: default
@@ -99,6 +99,7 @@ div.fetch-tweets-body p.fetch-tweets-text {
 }
 ul.fetch-tweets-intent-buttons li {
 	margin-left: 0;
+	list-style-type: none;
 }
 .fetch-tweets-intent-buttons-text {
 	vertical-align: middle;
