--- a/template/plain/style.css
+++ b/template/plain/style.css
@@ -12,107 +12,107 @@ Text Domain: fetch-tweets
 */
 
 .fetch-tweets {
-	overflow-y: auto;	
-	overflow-x: hidden;
+	overflow-y: auto !important;	
+	overflow-x: hidden !important;
 }
 .fetch-tweets-item {
-	display: inline-block; 
-	padding-bottom: 0.5em;	
-	width: 100%;
+	display: inline-block !important; 
+	padding-bottom: 0.5em !important;	
+	width: 100% !important;
 }
 .fetch-tweets-retweet {
 }
 .fetch-tweets-main {
-	padding: 0 0.8em;
-	/* display: table-cell; */
+	padding: 0 0.8em !important;
+	/* display: table-cell !important; */
 }
 .fetch-tweets-heading {
-	vertical-align: text-top;
-	line-height: 1em;
+	vertical-align: text-top !important;
+	line-height: 1em !important;
 }
 .fetch-tweets-profile-image {
-	/* display: table-column; */
-	/* float: left; */
-	/* clear: left; */
-	margin: 0 0 0 0;
+	/* display: table-column !important; */
+	/* float: left !important; */
+	/* clear: left !important; */
+	margin: 0 0 0 0 !important;
 }
 .fetch-tweets-user-name {
-	margin-bottom: 0.3em;
-	display: inline-block; 
+	margin-bottom: 0.3em !important;
+	display: inline-block !important; 
 
 }
 .fetch-tweets-user-name a {
-	text-decoration: none;
+	text-decoration: none !important;
 }
 .fetch-tweets-tweet-created-at {
-	display: inline;
+	display: inline !important;
 
-	float: right; 
-	font-size: smaller; 
-	margin-left: 1em;
+	float: right !important; 
+	font-size: smaller !important; 
+	margin-left: 1em !important;
 }
 .fetch-tweets-tweet-created-at a {
-	text-decoration: none;
+	text-decoration: none !important;
 }
 .fetch-tweets-body {
-	/* clear: right; */
+	/* clear: right !important; */
 }
 .fetch-tweets-text {
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 }
 div.fetch-tweets-body p.fetch-tweets-text {
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 }
 .fetch-tweets-retweet-credit {
-	float: right;
-	margin-left: 0.5em;
-	font-size: smaller;
+	float: right !important;
+	margin-left: 0.5em !important;
+	font-size: smaller !important;
 }
 .fetch-tweets-retweet-credit a {
-	text-decoration: none;
+	text-decoration: none !important;
 }
 .fetch-tweets .fetch-tweets-external-media {
-	clear: both;
+	clear: both !important;
 }
 .fetch-tweets .fetch-tweets-media-photo {
 }
 .fetch-tweets .fetch-tweets-external-media img,
 .fetch-tweets .fetch-tweets-media-photo img {
-	max-width: 100%;
-	height: auto;	
+	max-width: 100% !important;
+	height: auto !important;	
 }
 .fetch-tweets .fetch-tweets-media {
 }
 
 .fetch-tweets-intent-buttons {
-	float: right;
-	font-size: smaller;
-	margin: 0;
-	padding: 0;		
+	float: right !important;
+	font-size: smaller !important;
+	margin: 0 !important;
+	padding: 0 !important;		
 }
 .fetch-tweets-intent-buttons a ,
 .fetch-tweets-intent-icon a:hover {
-	text-decoration: none;
+	text-decoration: none !important;
 }
 .fetch-tweets-intent-buttons li {
-	display: inline;
+	display: inline !important;
 }
 ul.fetch-tweets-intent-buttons li {
-	margin-left: 0;
-	list-style-type: none;
+	margin-left: 0 !important;
+	list-style-type: none !important;
 }
 .fetch-tweets-intent-buttons-text {
-	vertical-align: middle;
+	vertical-align: middle !important;
 }
 
 .fetch-tweets-intent-icon {
-	display: inline-block;
-	vertical-align: middle;
-	width: 16px;
-	height: 16px;
-	background-position: 0 0;
-	background-repeat:no-repeat;
+	display: inline-block !important;
+	vertical-align: middle !important;
+	width: 16px !important;
+	height: 16px !important;
+	background-position: 0 0 !important;
+	background-repeat:no-repeat !important;
 }
 .fetch-tweets-intent-icon:hover  {
-	background-position: -16px 0;
+	background-position: -16px 0 !important;
 }
