--- a/asset/css/fetch_tweets_settings.css
+++ b/asset/css/fetch_tweets_settings.css
@@ -9,3 +9,15 @@
 	font-weight:bold;
 	color: red;				
 }
+
+
+.form-table.status-resources {
+	margin: 0;
+}
+.form-table.status-resources th{
+	font-weight: normal;
+}
+.form-table.status-resources th,
+.form-table.status-resources td {
+	padding: 4px 10px 4px 0;	
+}
